overflow fix hp

--- a/css/index.css
+++ b/css/index.css
@@ -228,8 +228,10 @@ section .imgbg {
 @media (min-width:768px) and (max-width:1400px) {
 
 body {
-    height:auto;
-    overflow: auto;
+    height:100vh;
+    width: 100vw;
+    overflow-x: scroll;
+    overflow-y: scroll;
 }
 
 section .imgbg {
